add family backoffice

--- a/StarDancers/index.html
+++ b/StarDancers/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv="Cache-control" content="no-cache">
   <meta name="title" content="Star Dancers Management">
   <meta name="description" content="Software de Gestão para Star Dancers Management.">
   <meta name="keywords" content="Software, Management, NodeJS, StarDancers, Dance">
